# pygsound

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README  README.md  pyproject.toml  setup.py
pysound/: CMakeLists.txt
pysound/src/: ARDUtils.cpp  ARDUtils.hpp  Listener.cpp  Metrics.cpp  Metrics.hpp  Scene.cpp  SoundMesh.cpp  SoundMesh.hpp  SoundSource.cpp  SoundSource.hpp  main.cpp  module.cpp
src/Om/: CMakeLists.txt
src/Om/Om BVH/: CMakeLists.txt
src/Om/Om BVH/om/: omBVH.h
src/Om/Om BVH/om/bvh/: omAABBTree4.cpp  omBVHBVH.cpp  omBVHBVH.h  omBVHConfig.h  omBVHGeometry.h  omBVHInstance.cpp  omBVHScene.cpp  omBVHScene.h
src/Om/Om Compression/om/compression/: omCompressedOutputStream.cpp  omCompressedOutputStream.h  omCompressionConfig.h  omCompressionSettings.h
src/Om/Om Framework/: CMakeLists.txt
src/Om/Om Framework/om/: omAssets.h  omConfig.h  omData.h  omFramework.h  omLanguage.h  omMath.h  omSystem.h  omTime.h  omUtilities.h
src/Om/Om Framework/om/data/: omDataBuffer.cpp  omDataConfig.h  omDataStore.cpp  omEndian.h  omHashCode.cpp  omString.cpp  omString.h  omStringBuffer.cpp  omStringIterator.h
src/Om/Om Framework/om/fs/: omFileSystemNode.cpp  omFileSystemNode.h
src/Om/Om Framework/om/io/: omBinaryFormat.h  omFileReader.cpp  omFileReader.h  omFileWriter.h  omIOConfig.h  omLog.cpp  omLog.h  omPrintStream.cpp  omStringOutputStream.h
src/Om/Om Framework/om/lang/: omAny.h  omFlags.h  omFunctionCall.h  omLanguageConfig.h  omOptional.h  omType.cpp  omUnique.h  omUserData.h
src/Om/Om Framework/om/lang/internal/: omFunctionDefinition.h  omMemberFunction.h
src/Om/Om Framework/om/math/: omArrayMath.cpp  omComplex.h  omConvolution.cpp  omFFT.h  omFFTBase.h  omFixed.h  omInterpolation.h  omMatrixND.h  omPlane3D.h  omPoissonDistribution.h  omPrimes.cpp  omRay2D.h  omSIMD.h  omSIMDArrayInt32.h  omSIMDConfig.h  omSIMDFlags.cpp  omSIMDPlane3D.h  omSIMDScalar.h  omSIMDScalarFloat32_4.h  omSIMDScalarFloat64x2.h  omSIMDScalarInt16_8.h  omSIMDScalarInt32_4.h  omSIMDScalarInt32x4.h  omSIMDScalarInt64x2.h  omSIMDScalarInt8x16.h  omSIMDTypes.h  omSIMDVector3D.h  omScalarMath.h  omScalarType.cpp  omSphericalHarmonics.h  omTensor.cpp  omTensor.h  omTensorMath.cpp  omTensorType.cpp  omTransform2D.h  omTransform3D.h  omVector2D.h  omVector3D.h  omVector4D.h
src/Om/Om Framework/om/system/: omCPU.cpp  omCPU.h  omDisplay.h  omDisplayID.h  omDisplay_Win32.cpp  omMemory.cpp  omMemory.h
src/Om/Om Framework/om/threads/: omAtomics.cpp  omMutex.cpp  omSemaphore.cpp  omSignal.cpp  omSignal.h  omThreadBase_Cocoa.mm  omThreadBase_Win32.cpp  omThreadPool.h  omThreadPriority.cpp  omThreadPriority.h  omThreadsConfig.h
src/Om/Om Framework/om/time/: omDay.cpp  omDay.h  omMonth.cpp  omTime.cpp  omTime.h  omTimeOfDay.cpp  omTimeOfDay.h
src/Om/Om Framework/om/util/: omAllocator.h  omArrayList.h  omLinkedList.h  omObjectPool.h  omPriorityQueue.h  omShortArray.h  omStaticArray.h
src/Om/Om Resources/: CMakeLists.txt
src/Om/Om Resources/om/: omResources.h
src/Om/Om Resources/om/resources/: omResourceCategory.cpp  omResourceDecoder.h  omResourceEncoder.h  omResourceFormat.cpp  omResourceFormat.h  omResourceGroup.cpp  omResourceGroup.h  omResourceGroupTranscoder.h  omResourceID.h  omResourceManager.cpp  omResourceManager.h  omResourceMode.cpp  omResourceMode.h  omResourceModule.cpp  omResourceModule.h  omResourcePrototype.h  omResourceSet.h  omResourceSetTranscoder.cpp  omResourceSetTranscoder.h  omResourceSetTranscoderTemplate.cpp  omResourceTag.cpp  omResourceTag.h  omResourceTagTranscoder.cpp  omResourceTypeID.h  omResourceTypeSet.h  omResourceTypeTranscoder.h  omResourcesConfig.h  omResourcesResourceModule.cpp
src/Om/Om Sound/: CMakeLists.txt
src/Om/Om Sound/om/: omSound.h
src/Om/Om Sound/om/sound/: omSoundBase.h  omSoundDevices.h  omSoundFilters.h  omSoundIO.h  omSoundPlugins.h  omSoundResources.h
src/Om/Om Sound/om/sound/base/: omSound.cpp  omSoundBaseConfig.h  omSoundBuffer.cpp  omSoundCallbackStream.cpp  omSoundCallbackStream.h  omSoundChannelInfo.h  omSoundChannelMixMatrix.h  omSoundChannelType.cpp  omSoundChannelType.h  omSoundConvolution.cpp  omSoundConvolution.h  omSoundDataInputStream.cpp  omSoundDataInputStream.h  omSoundDirectionalIR.cpp  omSoundFormat.cpp  omSoundFormat.h  omSoundFormatSettings.h  omSoundFrame.cpp  omSoundFrame.h  omSoundFrequencyBands.h  omSoundFrequencyData.cpp  omSoundInt24.h  omSoundLerpState.h  omSoundMIDIBuffer.h  omSoundMIDIInputStream.cpp  omSoundMIDIInputStream.h  omSoundMIDIMessage.cpp  omSoundMIDIOutputStream.h  omSoundOutputStream.cpp  omSoundOutputStream.h  omSoundResult.h  omSoundSIMDCrossover.h  omSoundSample.h  omSoundSampleType.h  omSoundSharedBufferPool.h  omSoundTimeSignature.h  omSoundTrack.cpp
src/Om/Om Sound/om/sound/devices/: omDefaultSoundDevice.cpp  omSoundDevice.cpp  omSoundDeviceDelegate.h  omSoundDeviceID.cpp  omSoundDeviceManager.cpp  omSoundDeviceManagerDelegate.h  omSoundDeviceManager_CoreAudio.cpp  omSoundDevice_CoreAudio.cpp  omSoundDevice_WASAPI.cpp  omSoundMIDIDevice.cpp  omSoundMIDIDevice.h  omSoundMIDIDeviceDelegate.h  omSoundMIDIDeviceID.h  omSoundMIDIDeviceManager.cpp  omSoundMIDIDeviceManagerDelegate.h  omSoundMIDIDevice_CoreMIDI.cpp  omSoundMIDIDevice_WinMM.cpp
src/Om/Om Sound/om/sound/filters/: omSoundBitcrusher.cpp  omSoundCutoffFilter.h  omSoundCutofffilter.cpp  omSoundDCFilter.h  omSoundDistortion.cpp  omSoundFilter.cpp  omSoundFilter.h  omSoundFilterCategory.cpp  omSoundFilterGraph.cpp  omSoundFilterParameter.cpp  omSoundFilterParameter.h  omSoundFilterSeries.cpp  omSoundFilterVersion.cpp  omSoundFilterVersion.h  omSoundFiltersConfig.h  omSoundFlanger.cpp  omSoundFlanger.h  omSoundGainFilter.cpp  omSoundGainFilter.h  omSoundGraphicEqualizer.h  omSoundIRUtility.h  (+22 more)
src/Om/platform/: zmmintrin.h
src/pygsound/: CMakeLists.txt  __init__.py
src/pygsound/src/: Context.cpp  Context.hpp  Listener.cpp  Listener.hpp  MicrophoneArrays.cpp  MicrophoneArrays.hpp  Python.hpp  Scene.cpp  Scene.hpp  SoundMesh.cpp  SoundMesh.hpp  module.cpp
src/pygsound/tests/: test_ir_compute.cpp
(+424 files in other folders)
